fix: Remove dark mode

--- a/frontend/src/app/ui/globals.css
+++ b/frontend/src/app/ui/globals.css
@@ -14,14 +14,6 @@
 	--font-mono: var(--font-geist-mono);
 }
 
-/* TODO: Check if this is needed */
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
-	}
-}
-
 body {
 	background: var(--background);
 	color: var(--foreground);
